--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -860,8 +860,8 @@ docker run -d -it -p 1521:1521 \
 --name oracle11g \
 --restart=always \
 --mount source=oracle_vol,target=/home/oracle/app/oracle/oradata oracle_11g
-# --mount source=宿主机(Docker Engine 中的默认存储路径)/oracle_vol,target=虚拟机容器内路径
-将(虚拟机)容器内 /home/oracle/app/oracle/oradata oracle_11g 映射到(宿主机) /var/lib/docker/volumes/oracle_vol
+# --mount source=宿主机(Docker Engine 中的默认存储路径)/oracle_vol,target=容器内路径
+将[容器内] /home/oracle/app/oracle/oradata oracle_11g 映射到[宿主机] /var/lib/docker/volumes/oracle_vol
 
 四、查看并进入容器
 docker ps
@@ -978,30 +978,30 @@ appendonly yes
 四、启动命令
 # 单节点
 -- 不设密码
-docker run --name redis5 --restart=always -p 6379:6379 \
+docker run -d --name redis5 -p 6379:6379 --restart=always --privileged=true \
 -v /docker-software/redis_v5/redis_6379.conf:/etc/redis/redis_6379.conf \
 -v /docker-software/redis_v5/data/d_6379:/etc/redis/data1 \
 -v /docker-software/redis_v5/logs:/etc/redis/logs \
--d redis5:5.0.7 redis-server /etc/redis/redis_6379.conf \
+redis5:5.0.7 redis-server /etc/redis/redis_6379.conf \
 --appendonly yes
 -- 设置密码
-docker run --name redis5 --privileged=true --restart=always -p 6379:6379 \
+docker run -d --name redis5 -p 6379:6379 --restart=always --privileged=true \
 -v /docker-software/redis_v5/redis_6379.conf:/etc/redis/redis_6379.conf \
 -v /docker-software/redis_v5/data/d_6379:/etc/redis/data1 \
 -v /docker-software/redis_v5/logs:/etc/redis/logs \
--d redis5:5.0.7 redis-server /etc/redis/redis_6379.conf \
+redis5:5.0.7 redis-server /etc/redis/redis_6379.conf \
 --requirepass 123456 --appendonly yes
 # 若[redis_6379.conf 文件]配置的[log 文件]没被挂载
 -- 创建
 touch /docker-software/redis_v5/logs/6379.log
 -- 赋权
 chmod -R 777 /docker-software/redis_v5/logs
--- 从 虚拟机 复制到 容器
+-- 从 宿主机 复制到 容器
 docker cp -a /docker-software/redis_v5/logs redis5:/etc/redis
 
 # 主从快速搭建
 1) 启动 Redis 主节点
-docker run -d --name redis-master -p 6379:6379 redis:latest --requirepass 123456 --port 6379
+docker run -d --name redis-master -p 6379:6379 --port 6379 redis:latest --requirepass 123456
 2) 启动 Redis 从节点1
 docker run -d --name redis-slave1 --link redis-master:redis -p 6380:6380 redis:latest redis-server --slaveof redis 6379 --masterauth 123456 --requirepass 123456
 3) 启动 Redis 从节点2
