--- a/应用文档/02_问题收集/日常小结.md
+++ b/应用文档/02_问题收集/日常小结.md
@@ -6552,6 +6552,16 @@ N → 寻找上一个
 
 ## Docker相关
 
+```markdown
+# 前置概念
+物理机		现实存在的机器
+虚拟机		在物理机内存上，创建了一个虚拟的机器系统(如：VMware)
+
+# 宿主机 → 被依赖的机器
+[物理机]是[虚拟机]的[宿主机]
+[虚拟机]是[容器]的[宿主机]
+```
+
 ### 操作镜像
 
 ```markdown
@@ -6585,13 +6595,23 @@ docker rmi -f nginx
 ```bash
 # 创建容器
 docker run [OPTIONS] IMAGE [COMMAND] [ARG...]
-# 常用 [OPTIONS]
-  -d		后台运行容器并打印容器ID
-  -i		以交互模式运行容器，通常与 -t 同时使用
-  -t		分配一个伪终端，通常与 -i 同时使用
-  --name	为容器指定一个名称
-  -p		发布容器的端口到主机
-  -v		挂载一个目录或文件
+★ 常用 [OPTIONS]
+  -d			后台运行容器并打印容器ID
+  -i			以交互模式运行容器(通常与 -t 同时使用)
+  -t			分配一个伪终端(通常与 -i 同时使用)
+  --name		为容器指定一个名称
+  -p			发布容器的端口到主机
+  				★ hostPort:containerPort
+  -v			挂载一个目录或文件
+  				★ 宿主机路径:容器路径
+  --restart		Docker的重启策略
+  				★ --restart=always/no
+  --privileged	给予容器额外的权限，允许它访问宿主机上的设备，以及执行一些需要更高权限的操作
+  				★ --privileged=true/false
+★ [COMMAND]
+docker run -it image:latest /bin/bash
+★ [ARG] 用于为 [COMMAND] 提供参数；具体由对应容器需要执行的命令决定
+docker run -d --name myNginx -p 80:80 nginx /bin/bash -c "echo 'Hello from Nginx!'"
 
 # 查看所有容器
 docker ps -a
@@ -6693,7 +6713,7 @@ docker inspect -f '{{.Mounts}}' mysql
 -- ro 挂载为只读模式
 -- rw 可读写模式
 -- rprivate 多个容器间共享挂载的内容，但对挂载的内容的更改是私有的，不会影响到其他的容器
-[{bind  /宿主机(物理机)的路径 /(虚拟机)容器内的路径  rw true rprivate} {bind xxx}]
+[{bind  /宿主机的路径 /容器内的路径  rw true rprivate} {bind xxx}]
 [{bind  /etc/localtime     /etc/localtime     ro false rprivate}]
 ```
 
@@ -6774,22 +6794,22 @@ Reading the configuration file, at line 171
 >>> 'logfile "/etc/redis/logs/6380.log"'
 Can't open the log file: No such file or directory
 -- 原因
-1) [redis.conf]指定的[logfile 路径] 与 [容器挂载]到[虚拟机]上面的[路径不一致]
-2) [redis.conf]指定了[logfile 路径] 但 [没被容器挂载]到[虚拟机]
+1) [redis.conf]指定的[logfile 路径] 与 [容器挂载]到[宿主机]上面的[路径不一致]
+2) [redis.conf]指定了[logfile 路径] 但 [没被容器挂载]到[宿主机]
 -- 解决
-1) 修改虚拟机挂载配置
-vi /虚拟机路径/redis.conf → 修改[logfile 路径]
-2) 复制虚拟机目录到容器中
-cd /虚拟机路径
+1) 修改宿主机挂载配置
+vi /宿主机路径/redis.conf → 修改[logfile 路径]
+2) 复制宿主机目录到容器中
+cd /宿主机路径
 touch 6380.log
-docker cp -a /虚拟机路径/logs 容器id:/etc/redis
+docker cp -a /宿主机路径/logs 容器id:/etc/redis
    或 删除容器，重新部署
 docker rm -fv redis
 docker run -d --name redis --restart=always -p 6379:6379 \
--v /物理机路径/redis.conf:/虚拟机路径/redis.conf \
--v /物理机路径/data:/虚拟机路径/data \
--v /物理机路径/logs:/etc/redis/logs \
--d redis:x.x.x redis-server /虚拟机路径/redis.conf \
+-v /宿主机路径/redis.conf:/容器内部路径/redis.conf \
+-v /宿主机路径/data:/容器内部路径/data \
+-v /宿主机路径/logs:/etc/redis/logs \
+-d redis:x.x.x redis-server /容器内部路径/redis.conf \
 --appendonly yes
 ```
 
