--- a/应用文档/document/01/Website/哨兵主从集群.md
+++ b/应用文档/document/01/Website/哨兵主从集群.md
@@ -12,7 +12,7 @@
 
 其他参考：[Docker搭建Redis主从复制集群](https://blog.csdn.net/qq_43753724/article/details/120390533) | [Docker搭建Redis哨兵模式集群](https://download.csdn.net/blog/column/10939729/120393724)
 
-# 默认方式(成功)
+# 默认方式
 
 ```shell
 # 前提条件
@@ -43,11 +43,11 @@ touch /docker-software/redis/logs/s_{26379,26380,26381}.log
 
 4) sentinel_26379.conf、sentinel_26380.conf、sentinel_26381.conf
 ★ 重要配置如下(注意：需要监听虚拟机节点，而非容器节点)
-port 26379
+port 26380
 dir /tmp
 #sentinel monitor mymaster redis-master 6379 2
-sentinel monitor mymaster 172.17.0.5 6379 2
-#sentinel monitor mymaster 192.168.145.121 6379 2
+#sentinel monitor mymaster 172.17.0.5 6379 2 # ×
+sentinel monitor mymaster 192.168.145.121 6379 2
 sentinel auth-pass mymaster 123456
 sentinel down-after-milliseconds mymaster 5000
 sentinel failover-timeout mymaster 10000
@@ -63,7 +63,7 @@ chmod -R 777 /docker-software/redis
 
 ```bash
 # 启动 Redis 主节点
-docker run --name redis-master -p 6379:6379 \
+docker run --name redis-master -p 6379:6379 --privileged=true \
 -v /docker-software/redis/redis_6379.conf:/etc/redis/redis_6379.conf \
 -v /docker-software/redis/data/d_6379:/etc/redis/data/d_6379 \
 -v /docker-software/redis/logs/6379.log:/etc/redis/logs/6379.log \
@@ -74,24 +74,24 @@ docker inspect redis-master
 "IPAddress": "172.17.0.5"
 
 # 启动 Redis 从节点1
-  --link redis-master:redis → 将 redis-master 容器链接到从节点容器，并将其命名为 redis
+  --link redis-master:redis → 将 redis-master 容器链接到从节点容器，并将其命名为 redis_m
   --slaveof redis 6379 → 指定主节点容器的名称为 redis，端口号为 6379
-docker run --name redis-slave1 --link redis-master:redis -p 6380:6380 \
+docker run --name redis-slave1 -p 6380:6380 --link redis-master:redis_m --privileged=true \
 -v /docker-software/redis/redis_6380.conf:/etc/redis/redis_6380.conf \
 -v /docker-software/redis/data/d_6380:/etc/redis/data/d_6380 \
 -v /docker-software/redis/logs/6380.log:/etc/redis/logs/6380.log \
 -d redis:latest redis-server /etc/redis/redis_6380.conf \
---slaveof redis 6379 --masterauth 123456 --requirepass 123456 --appendonly yes
+--slaveof redis_m 6379 --masterauth 123456 --requirepass 123456 --appendonly yes
 
 # 启动 Redis 从节点2
   --masterauth 123456 → 告诉从节点使用123456密码认证主节点
   --requirepass 123456 → 设置从节点本身的访问密码
-docker run --name redis-slave2 --link redis-master:redis -p 6381:6381 \
+docker run --name redis-slave2 -p 6381:6381 --link redis-master:redis_m --privileged=true \
 -v /docker-software/redis/redis_6381.conf:/etc/redis/redis_6381.conf \
 -v /docker-software/redis/data/d_6381:/etc/redis/data/d_6381 \
 -v /docker-software/redis/logs/6381.log:/etc/redis/logs/6381.log \
 -d redis:latest redis-server /etc/redis/redis_6381.conf \
---slaveof redis 6379 --masterauth 123456 --requirepass 123456 --appendonly yes
+--slaveof redis_m 6379 --masterauth 123456 --requirepass 123456 --appendonly yes
 ```
 
 ## 哨兵模式
@@ -119,7 +119,7 @@ docker run --name redis-sentinel3 -p 26381:26381 \
 -d redis:latest redis-sentinel /etc/redis/sentinel_26381.conf
 ```
 
-# 自定义域方式(有问题)
+# 自定义域方式
 
 ```shell
 # 前提条件
@@ -138,7 +138,7 @@ docker network rm redis-net
 
 ```bash
 # 主节点
-docker run --name redis-master --network redis-net -p 6379:6379 \
+docker run --name redis-master -p 6379:6379 --network redis-net --privileged=true \
 -v /docker-software/redis/redis_6379.conf:/etc/redis/redis_6379.conf \
 -v /docker-software/redis/data/d_6379:/etc/redis/data/d_6379 \
 -v /docker-software/redis/logs/6379.log:/etc/redis/logs/6379.log \
@@ -146,41 +146,41 @@ docker run --name redis-master --network redis-net -p 6379:6379 \
 --requirepass 123456 --appendonly yes
 
 # 从节点1
-docker run --name redis-slave1 --network redis-net -p 6380:6380 \
+docker run --name redis-slave1 -p 6380:6380 --network redis-net --privileged=true \
 -v /docker-software/redis/redis_6380.conf:/etc/redis/redis_6380.conf \
 -v /docker-software/redis/data/d_6380:/etc/redis/data/d_6380 \
 -v /docker-software/redis/logs/6380.log:/etc/redis/logs/6380.log \
 -d redis:latest redis-server /etc/redis/redis_6380.conf \
---slaveof redis 6379 --masterauth 123456 --requirepass 123456 --appendonly yes
+--slaveof redis-master 6379 --masterauth 123456 --requirepass 123456 --appendonly yes
 
 # 从节点2
-docker run --name redis-slave2 --network redis-net -p 6381:6381 \
+docker run --name redis-slave2 -p 6381:6381 --network redis-net --privileged=true \
 -v /docker-software/redis/redis_6381.conf:/etc/redis/redis_6381.conf \
 -v /docker-software/redis/data/d_6381:/etc/redis/data/d_6381 \
 -v /docker-software/redis/logs/6381.log:/etc/redis/logs/6381.log \
 -d redis:latest redis-server /etc/redis/redis_6381.conf \
---slaveof redis 6379 --masterauth 123456 --requirepass 123456 --appendonly yes
+--slaveof redis-master 6379 --masterauth 123456 --requirepass 123456 --appendonly yes
 ```
 
 ## 哨兵模式
 
 ```bash
 # 哨兵1
-docker run -d --name redis-sentinel1 --network redis-net -p 26379:26379 \
+docker run -d --name redis-sentinel1 -p 26379:26379 --network redis-net \
 -v /docker-software/redis/sentinel_26379.conf:/etc/redis/sentinel_26379.conf \
 -v /docker-software/redis/data/sd_26379:/etc/redis/data/sd_26379 \
 -v /docker-software/redis/logs/s_26379.log:/etc/redis/logs/s_26379.log \
 redis:latest redis-sentinel /etc/redis/sentinel_26379.conf
 
 # 哨兵2
-docker run --name redis-sentinel2 --network redis-net -p 26380:26380 \
+docker run --name redis-sentinel2 -p 26380:26380 --network redis-net \
 -v /docker-software/redis/sentinel_26380.conf:/etc/redis/sentinel_26380.conf \
 -v /docker-software/redis/data/sd_26380:/etc/redis/data/sd_26380 \
 -v /docker-software/redis/logs/s_26380.log:/etc/redis/logs/s_26380.log \
 -d redis:latest redis-sentinel /etc/redis/sentinel_26380.conf
 
 # 哨兵3
-docker run --name redis-sentinel3 --network redis-net -p 26381:26381 \
+docker run --name redis-sentinel3 -p 26381:26381 --network redis-net \
 -v /docker-software/redis/sentinel_26381.conf:/etc/redis/sentinel_26381.conf \
 -v /docker-software/redis/data/sd_26381:/etc/redis/data/sd_26381 \
 -v /docker-software/redis/logs/s_26381.log:/etc/redis/logs/s_26381.log \
