--- a/应用文档/01_工具网站/常用工具.md
+++ b/应用文档/01_工具网站/常用工具.md
@@ -66,12 +66,9 @@ https://github.com/lblblong/nat-utools
 
 ## 【节点连接】工具
 
-### # MobaXterm
+### # [MobaXterm](https://mobaxterm.mobatek.net)
 
 ```markdown
-# 官网
-https://mobaxterm.mobatek.net
-
 # 下载地址(Windows版)
 https://mobaxterm.mobatek.net/download.html
 
@@ -89,14 +86,14 @@ Remote host: 192.168.145.121
 what.0414
 ```
 
-### # FinalShell
+### # [FinalShell](http://www.hostbuf.com)
 
 ```markdown
-# 官网
-http://www.hostbuf.com
-
 # 下载地址(Windows版)
-http://www.hostbuf.com/downloads/finalshell_install.exe
+-- 新版本
+https://www.hostbuf.com/t/988.html
+-- 旧版本
+https://www.hostbuf.com/t/1326.html
 
 # 若提示：以管理员身份打开
 -- 方法1
@@ -105,12 +102,19 @@ http://www.hostbuf.com/downloads/finalshell_install.exe
 右击快捷exe程序 → 属性 → 快捷方式 → 高级 → 勾选[用管理员身份运行]
 ```
 
-### # WinSCP
+### # [Xshell](https://www.xshell.com)
 
 ```markdown
-# 官网
-https://winscp.net/eng/docs/lang:chs
+# 下载地址(Windows版)
+https://www.xshell.com/zh/free-for-home-school
 
+#  注意
+还需要等待 Microsoft Visual C++ 下载
+```
+
+### # [WinSCP](https://winscp.net/eng/docs/start)
+
+```markdown
 # 下载地址
 https://winscp.net/eng/download.php
 
@@ -118,14 +122,11 @@ https://winscp.net/eng/download.php
 https://www.soft-down.net/detail/273040/2730391001.shtml
 ```
 
-### # Xshell
+### # [WindTerm](https://github.com/kingToolbox/WindTerm/tags)
 
 ```markdown
-# 官网
-http://www.netsarang.com/products/xsh_overview.html
-
-# 安装参考
-https://blog.csdn.net/qq_32653877/article/details/81984745
+# 备用地址
+https://www.dongli7.com/thread-151-1-1.html
 ```
 
 ## 【接口测试】工具
