--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -3249,6 +3249,8 @@ https://z008.blogspot.com/2023/10/ZV2.html
 https://github.com/2dust/v2rayN/releases/tag/7.3.0
 
 # 下载
+v2rayN-windows-64-With-Core.zip
+或者
 v2rayN-windows-64-SelfContained-With-Core.7z
 ```
 
@@ -3263,39 +3265,38 @@ v2rayN-windows-64-SelfContained-With-Core.7z
 # 关闭
 系统代理[清除系统代理]
 
-# 内地白名单(不在名单里的都走代理)
-路由 → 
-      绕过大陆 (访问国内网站，仍然是内地IP)
-        [√] Google cn
-        [√] 阻断udp443、阻断广告、绕过局域网IP、绕过局域网域名
-        [√] 绕过中国公共DNSIP、绕过中国公共DNS域名、绕过中国IP、绕过中国域名
-        [√] 最终代理
-      全局 (全部以代理IP访问)
-        [√] 阻断udp443、阻断广告、绕过局域网IP、绕过局域网域名
-        [√] 最终代理
-```
-
-### 注意事项
-
-#### Windows
-
-```markdown
 # 无法科学上网
-设置 → 参数设置 → Core: 基础设置 → 启用分片 (Fragment)
-              → Core类型设置 → Shadowsocks[sing box]
-```
-
-#### Android
-
-```markdown
-# 无法科学上网
+-- Windows
+设置 → 参数设置 → Core: 基础设置 → 开启流量探测(不推荐打开)
+                             → 允许来自局域网的连接[√]
+                             → 开启Mux多路复用(不推荐打开)
+                             → 启用分片 (Fragment)[√] 使用Xray且非Tun模式启用，和分组前置代理冲突
+-- Android
 设置 → 分片 (Fragment) 设置 → 启用分片 (Fragment)
     → 启动本地DNS、启动虚拟DNS
+
+# 其他设置说明(Win)
+设置 → 参数设置 → v2rayN 设置 → 开机启动
+                           → 启用统计
+                           → 启动后隐藏窗口
+                           → 测速文件地址(网速不通时，可更换)
+                           → 真连接测试地址(真实连接-1时，可更换)
+              → Tun模式设置 (局域网连接时设置，不推荐) → Stack [gvisor]
+              → Core类型设置 → [6kmfi]搭建的项目，需要选择[Xray]
+设置 → 路由设置 → 域名解析策略(默认 Asls) [IPOnDemand] → 域名匹配算法(默认 空) [mph]
+    → 绕过大陆 (访问国内网站，仍然是内地IP)
+      [√] Google cn
+      [√] 阻断udp443、阻断广告、绕过局域网IP、绕过局域网域名
+      [√] 绕过中国公共DNSIP、绕过中国公共DNS域名、绕过中国IP、绕过中国域名
+      [√] 最终代理
+    全局 (全部以代理IP访问)
+      [√] 阻断udp443、阻断广告、绕过局域网IP、绕过局域网域名
+      [√] 最终代理
 ```
 
 ## 【Clash】
 
-<a href="..\document\01\Website\VPN\Clash介绍.md"># Clash介绍</a>
+<a href="..\document\01\Website\VPN\Clash介绍.md">详情介绍</a>
 
 ### [使用教学](https://www.youtube.com/watch?v=IJM5aHaeET8)
 
@@ -3374,6 +3375,191 @@ wk.viski.dynv6.net
 密码：what.0414
 # 域名
 dv.weiskey.dynv6.net
+```
+
+# VPS
+
+```markdown
+# Virtual Private Server
+虚拟专用服务器
+```
+
+## 【远程终端连接器】
+
+**[下载地址](常用工具.md#【节点连接】工具)**
+
+## [【搭建教学】](https://www.youtube.com/watch?v=ttqOSrIlL48)
+
+```markdown
+# 注意
+如果 PING 连接超时/丢失，可尝试挂[代理连接]
+例如：FinalShell
+连接管理器 | 设置 | SSH连接 → 代理服务器 → 添加
+  名称: v2ray
+  类型: SOCKS5
+  主机: 127.0.0.1
+  端口: 10808
+```
+
+### 1) 开放端口
+
+```shell
+# 配置Linux系统上的防火墙规则
+  -I INPUT 表示在INPUT链（处理进入系统的数据包）的开头插入一条新规则
+  -p tcp 指定这条规则适用于TCP协议的数据包。
+  --dport 80 表示目标端口是80，即只允许目标端口为80的TCP数据包通过
+  -j ACCEPT 表示接受（允许）符合以上条件的数据包通过
+iptables -I INPUT -p tcp --dport 80 -j ACCEPT
+
+# 开放一个端口范围
+  80:100 表示允许所有目标端口在80到100之间的TCP数据包进入系统
+iptables -I INPUT -p tcp --dports 80:100 -j ACCEPT
+
+# 开放所有端口
+ufw disable
+```
+
+### 2) 部署代理节点
+
+```shell
+# 系统组件升级至最新
+apt update -y && apt install -y curl && apt install -y socat
+
+# Hysteria 2 一键安装脚本
+wget -N --no-check-certificate https://raw.githubusercontent.com/flame1ce/hysteria2-install/main/hysteria2-install-main/hy2/hysteria.sh && bash hysteria.sh
+# 步骤
+1.安装 Hysteria 2  [√]
+2.卸载 Hysteria 2
+
+1.必应自签证书 (默认)  [√]
+2.Acme 脚本自动申请
+3.自定义证书路径
+
+设置 Hysteria 2 端口 [1-65535] (回车则随机分配端口)
+
+设置 Hysteria 2 密码 (回车跳过为随机字符)
+
+1.单端口(默认)
+2.端口跳跃
+假设按1，显示端口 10532
+
+请输入 Hysteria 2的伪装网站地址 (去除https://)[默认首尔大学]: www.bing.com
+
+Hysteria 2 节点分享链接如下，并保存到 /root/hy/url.txt
+hysteria2://xxx@x.x,x:10532/?insecure=1&sni-ww.bing com#Hysteria2-misaka
+
+iptables -I INPUT -p tcp --dport 10532 -j ACCEPT
+
+# 查看 服务状态
+systemctl status hysteria-server.service
+
+# 设置 开机自启
+systemctl enable hysteria-server.service
+
+# 注意
+如果连接成功，依然无法科学上网，将 V2ray 的 Core类型设置 全变成 [sing box]
+```
+
+## [【Oracle服务器】](https://www.youtube.com/watch?v=E3z-T7d2jEI)
+
+[账号密码](#【Oracle】官网)
+
+```markdown
+# 注册地址
+不同地区注册甲骨文云服务器的页面链接是不一样的，具体注册链接如下：
+```
+
+[**大陆**](https://www.oracle.com/cn/cloud/free/) | [**台湾**](https://www.oracle.com/tw/cloud/free/) | [**美国**](https://www.oracle.com/cloud/free/) | [**澳洲**](https://www.oracle.com/au/cloud/free/) | [**日本**](https://www.oracle.com/jp/cloud/free/) | [**韩国**](https://www.oracle.com/kr/cloud/free/)
+
+更多地区，稍后补充……
+
+```tex
+# 注意
+1) 申请地区Ip，要符合当前上网IP
+2) 需要在浏览器 → 打开新的无痕式窗口
+
+账户信息
+  国家/地区
+  中国
+  
+  名字			姓氏
+  Xin Wei		  Xu
+  
+  电子邮件
+  outta_touch@163.com
+验证邮箱
+  备用姓名
+  Bo Han
+  
+  密码
+  Simple.0121
+  
+  Customer type
+  Corporate			[√]Individual
+  
+  主区域
+  Australia Southeast (Melbourne)
+输入真实地址
+  地址1
+  
+  城市
+  
+  省份		邮编
+```
+
+### 1) 开放端口
+
+```shell
+# 表示将INPUT链（处理进入系统的数据包）的默认策略设置为接受（ALLOW）。这意味着所有未被其他规则明确拒绝的进入数据包都将被允许
+sudo iptables -P INPUT ACCEPT
+
+# 表示将FORWARD链（处理转发的数据包）的默认策略设置为接受。这意味着所有未被其他规则明确拒绝的转发数据包都将被允许
+sudo iptables -P FORWARD ACCEPT
+
+# 表示将OUTPUT链（处理从系统发出的数据包）的默认策略设置为接受。这意味着所有未被其他规则明确拒绝的发出数据包都将被允许
+sudo iptables -P OUTPUT ACCEPT
+
+# 表示清空（flush）所有的iptables规则。执行这条命令会删除当前所有的防火墙规则，使系统恢复到没有自定义防火墙规则的状态
+sudo iptables -F
+```
+
+### 2) 部署代理节点
+
+```shell
+# 比如一键安装SSR
+wget -N --no-check-certificate https://raw.githubusercontent.com/teddysun/shadowsocks_install/master/shadowsocksR.sh
+
+chmod +x shadowsocksR.sh
+
+./shadowsocksR.sh
+```
+
+### 3) 安装VPN
+
+```shell
+# 一键安装OpenVPN
+wget https://git.io/vpn -O openvpn-install.sh && bash openvpn-install.sh
+```
+
+或者
+
+```shell
+# 更新系统组件
+apt update
+
+# 安装 git 环境
+apt install -y git
+
+# 一键安装V2ray
+wget -N --no-check-certificate -q -O install.sh "https://raw.githubusercontent.com/wulabing/V2Ray_ws-tls_bash_onekey/dev/install.sh" && chmod +x install.sh && bash install.sh
+```
+
+如果担心网站使用率不高被回收，可以配合保活脚本
+
+**[开源脚本](https://github.com/spiritLHLS/Oracle-server-keep-alive-script)** | **[网盘下载](http://pan.tuio.cc/s/lJxCp)**
+
+```
+bash <(wget -qO- --no-check-certificate https://gitlab.com/spiritysdx/Oracle-server-keep-alive-script/-/raw/main/oalive.sh)
 ```
 
 # AI Assistant
