--- a/应用文档/document/01/Website/哨兵主从集群.md
+++ b/应用文档/document/01/Website/哨兵主从集群.md
@@ -10,9 +10,9 @@
 -d(--detach)		以分离模式(detached mode)运行容器，即在后台运行并返回容器ID；意味着可以在不阻塞终端的情况下启动容器
 ```
 
-其他参考：[Docker搭建Redis主从复制集群](https://blog.csdn.net/qq_43753724/article/details/120390533) | [Docker搭建Redis哨兵模式集群](https://download.csdn.net/blog/column/10939729/120393724)
+其他参考：[Docker搭建Redis主从复制集群](https://download.csdn.net/blog/column/10939729/120390533) | [Docker搭建Redis哨兵模式集群](https://download.csdn.net/blog/column/10939729/120393724)
 
-# 默认方式
+# 默认方式(Bridge)
 
 ```shell
 # 前提条件
