--- a/应用文档/02_问题收集/日常小结.md
+++ b/应用文档/02_问题收集/日常小结.md
@@ -5590,6 +5590,14 @@ https://blog.csdn.net/begefefsef/article/details/126098501
 
 ## Win11
 
+### 分组推荐
+
+![image-20241224111039039](..\imgs\02\Summary\Windows\image-20241224111039039.png)
+
+### 手机分组
+
+![image-20241224111429343](..\imgs\02\Summary\Windows\image-20241224111429343.png)
+
 ### [无法创建文本文档](https://product.pconline.com.cn/itbk/software/dnyw/1524/15244157.html)
 
 注册文件：<a href="..\document\02\Summary\exe\txtFile.reg">txtFile.reg</a>
