--- a/应用文档/01_工具网站/常用工具.md
+++ b/应用文档/01_工具网站/常用工具.md
@@ -75,15 +75,28 @@ https://mobaxterm.mobatek.net/download.html
 # 添加连接
 点击左上角 Session → SSH
 Remote host: 192.168.145.121
-# 添加用户认证(不添加也可以在界面手动输入)
+# 添加用户认证
 点击[小人头像按钮] (Create or manage credentials) → Credentials → New
   Name: master
   Username(节点认证 用户): root
   Password(节点认证 密码): 123456
 [√]Specify username: [master]
-
+-- 也可在以下设置中 → 添加用户认证
+Settings | Configuration | General | MobaXterm passwords management
+                                   | Persistent home directory: 本地启动时的工作目录
+                                   | Persistent root (/) directory: 本地启动时的根目录
 # Master Password settings
 what.0414
+
+# 命令连接
+1) Start local terminal
+   命令行界面(终端模拟器)
+2) ssh [user]@[host]  →  默认连接22端口
+   ssh root@192.168.145.121
+3) 可以使用 -p 指定一个特定的端口，来连接到服务器
+   ssh -p 8080 root@192.168.145.121
+4) 如果使用SSH密钥对进行身份验证，可以使用 -i 选项指定私钥文件
+   ssh -i /path/to/private_key root@192.168.145.121
 ```
 
 ### # [FinalShell](http://www.hostbuf.com)
@@ -689,7 +702,7 @@ Editor | File Encodings → Global Encoding、Project Encoding、Default encodin
 ```tex
 1) Editor | Inspections → 搜索Serializable → 选中Serializable class without 'serialVersionUID'
    或者 Ctrl + Shift + A → 搜索Serializable class without 'serialVersionUID'
-2) 类 implements Serializable 之后，光标悬浮或选中类名，然后按 Alt+Enter+Enter 即可生成“序列化UID”
+2) 类 implements Serializable 之后，光标悬浮或点击类名，然后按 Alt+Enter → Create constant field 'serialVersionUlD' in 'xxx' 即可生成“序列化UID”
 ```
 
 ##### * Vue快捷键提示
