--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -278,18 +278,23 @@ git config --global credential.helper store
 
 ### # 常见问题
 
-* git remote: HTTP Basic: Access denied
-
-```tex
-原因：本地git配置的用户名、密码与gitlabs上注册的用户名、密码不一致
-
-解决方案：
+```markdown
+# git remote: HTTP Basic: Access denied
+-- 原因
+本地git配置的用户名、密码与gitlabs上注册的用户名、密码不一致
+-- 解决方案
 	1) 如果账号密码有变动，用这个命令：git config --system --unset credential.helper
 	   重新输入账号密码 应该就能解决了
 	2) 如果用了第一个命令，还不能解决问题；那么用这个命令：git config --global http.emptyAuth true
 	3) 如果以上两个方法不起作用，那么采用以下方法：
 	   进入控制面板→用户账户→管理你的凭据→windows凭据→普通凭据
 	   在里面找到git，点击(向下的箭头图标)展开→编辑；将密码更新为最新的，之后就可以正常操作了
+
+# 'xxx' is owned by: 'xxx' but the current user is: 'xxx'
+-- 原因
+修改了文件所有者，Git项目所有者与当前用户不一致
+-- 解决方案
+git config --global --add safe.directory "*"
 ```
 
 ## [【GitHub】官网](https://github.com)
@@ -3475,8 +3480,8 @@ systemctl enable hysteria-server.service
 
 ```tex
 # 注意
-1) 申请地区Ip，要符合当前上网IP
-2) 需要在浏览器 → 打开新的无痕式窗口
+1) 需要在浏览器 → 打开新的无痕式窗口
+2) 申请地区Ip，要符合当前上网IP
 
 账户信息
   国家/地区
