--- a/应用文档/02_问题收集/日常小结.md
+++ b/应用文档/02_问题收集/日常小结.md
@@ -3355,13 +3355,39 @@ select instance_name from v$instance;
 
 # MongoDB
 
-```tex
+## GeoJSON
 
+```json
+// 地理信息数据
+{
+  "_id": {
+    "$oid": "676cbd6c7d41a464b14fbc89"
+  },
+  "location": {
+    "type": "Point",
+    "coordinates": [
+      121.6329563323266,
+      31.245654257876705
+    ]
+  },
+  "precise": 1,
+  "confidence": 0,
+  "comprehension": 100,
+  "level": "地产小区",
+  "localName": "上海市浦东新区金葵新城西区10号"
+}
 ```
 
-# Lua脚本
+## mongoimport
 
-## 脚本示例
+```markdown
+# 导入JSON文件
+mongoimport --db your_database --collection your_collection --file your_geojson_file.json --jsonArray
+```
+
+# Redis
+
+## Lua脚本
 
 ```lua
 -- 原子增加计数器
@@ -6844,3 +6870,151 @@ docker run -d --name redis --restart=always -p 6379:6379 \
 2) 进入该目录，执行命令
   sudo ./vmware-uninstall-tools.pl
 ```
+
+# 计算机网络
+
+## 子网掩码
+
+```markdown
+# 定义
+[子网掩码]中的[1需要连续]，如下
+11111111 11111111 11111110 00000000
+若第[22位]为[1]，则后面[只能]为[0]，如下
+11111111 11111111 11111100 00000000
+
+# 作用
+判断两个IP地址 是否在同一个网络(网段) → 需要借助掩码进行 & 操作，如下：
+192.168.1.1			IP地址1
+255.255.252.0		子网掩码
+192.168.2.1			IP地址2
+以下判断 → 两个IP 在同一网段
+192.168.00000001.00000001  ↓ = 192.168.0.0
+255.255.11111100.00000000  &
+192.168.00000010.00000001  ↑ = 192.168.0.0
+
+192.168.1.1			IP地址1
+255.255.252.0		子网掩码
+192.168.2.1			IP地址2
+以下判断 → 两个IP 不在同一网段
+192.168.00000001.00000001  ↓ = 192.168.0.0
+255.255.11111100.00000000  &
+192.168.00000100.00000001  ↑ = 192.168.4.0
+```
+
+## 网络 和 广播
+
+```markdown
+# 定义
+网络地址 → 第一个网络号
+广播地址 → 发送广播时目的IP
+网络地址/广播地址 → 不能使用(不能分配主机)
+
+# 规律0
+子网掩码 → 255.255.255.0
+网络地址 → 192.168.0.0
+广播地址 → 192.168.0.255
+# 此时
+192.168.0.1 ~ 192.168.0.254 为 [可分配]给[主机]的[地址]
+
+# 规律1
+子网掩码 → 255.255.254.0
+网络地址 → 192.168.0.0
+广播地址 → 192.168.1.255
+# 此时
+192.168.0.1 ~ 192.168.1.254 为 [可分配]给[主机]的[地址]
+# 由于可分配地址范围扩大
+192.168.0.255、192.168.1.0 都能使用
+
+# 规律2
+子网掩码 → 255.255.252.0
+网络地址 → 192.168.0.0
+广播地址 → 192.168.3.255
+
+# 规律3
+子网掩码 → 255.255.248.0
+网络地址 → 192.168.0.0
+广播地址 → 192.168.7.255
+
+......
+
+# 规律7
+子网掩码 → 255.255.0.0
+网络地址 → 192.168.0.0
+广播地址 → 192.168.255.255
+```
+
+## IP/掩码
+
+```markdown
+# 作用
+确定[可分配]给[主机]的[IP范围]
+
+# 举例
+192.168.13.21/16			IP地址/掩码位数
+192.168.13.21				IP地址
+11111111.11111111.0.0		16位掩码
+255.255.0.0					子网掩码
+# 网络地址
+192.168.13.21 & 255.255.0.0 = 192.168.0.0
+# 广播地址
+192.168.255.255
+# 可用的主机地址范围
+192.168.0.1 ~ 192.168.255.254
+```
+
+## 问题
+
+```markdown
+# 问题：以下两个IP地址在同一网段吗
+192.168.1.8/24
+192.168.1.50/23
+
+1) 192.168.1.8/24
+192.168.1.8			网络地址计算
+255.255.255.0		子网掩码为
+# 网络地址
+192.168.00000001.00001000
+&
+255.255.11111111.00000000
+= 192.168.1.0
+
+2) 192.168.1.50/23
+192.168.00000001.00110010
+&
+255.255.11111110.00000000
+= 192.168.0.0
+
+# 综上：两个IP地址在同一网段
+```
+
+# 通用总结
+
+```markdown
+# 根目录
+-- Linux
+cd /
+会进入[所有文件]的[顶层目录]
+-- Windows
+cd \
+会进入某个[驱动器内部磁盘]的[顶层目录]
+-- Java
+java代码[查找]的[/ 或者 \]以[.idea文件]为[顶层目录]
+-- JavaScript、Css
+
+
+# 上级目录
+-- Linux
+cd ../
+-- Windows
+cd ..\
+
+# 当前目录
+-- Linux
+cd ./
+-- Windows
+cd .\
+
+# 注意
+虽然规范如此，但是[正斜杠]、[反斜杠]是[通用]的，不同系统[都能识别]
+```
+
