--- a/账密文档/账号及密码.md
+++ b/账密文档/账号及密码.md
@@ -414,27 +414,23 @@ what.0414
 
 # 文件地址
 
-## GitHub
+## [GitHub](https://github.com)
 
 ```markdown
+https://github.com/viskixin/MainDoc.git
 # 账密文档
 https://github.com/viskixin/Account.git
-
+ -- [账号及密码.md]  →  登录、验证
 # 应用文档
 /* 01_工具网站 */
- -- [常用工具.md]：开发工具、浏览器
- -- [常用网站.md]：开发网站、VPN
-https://github.com/viskixin/Application.git
+ -- [常用工具.md]  →  开发工具、浏览器
+ -- [常用网站.md]  →  开发网站、VPN
 ```
 
-## Gitee
+## [Gitee](https://gitee.com)
 
 ```markdown
-# 账密文档
-https://gitee.com/simpleway/Account.git
-
-# 应用文档
-https://gitee.com/simpleway/Application.git
+https://gitee.com/simpleway/MainDoc.git
 ```
 
 ## [Git操作](../应用文档/01_工具网站/常用网站.md/## 分支操作)
