--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -23,6 +23,16 @@ git config --global user.name "viskixin"
 git config --global user.email "2244255266@qq.com"
 # 查看配置是否OK
 git config --global --list
+# 配置详解
+  credential	是Git 的凭据管理功能，用于管理用户访问远程仓库的认证信息
+  provider		指定了一个凭据提供程序，用于决定如何存储和处理认证信息
+  generic		是通用提供程序，表示没有使用特定的提供程序（例如 wincred、osxkeychain 等），仅使用基础的凭据存储方式
+credential.https://gitee.com.provider=generic
+作用：指定 https://gitee.com 的认证提供程序为 generic
+  credential.helper		配置项定义了如何存储用户的认证信息
+  store					表示将认证信息（如用户名和密码）以纯文本的形式存储在用户目录下的 ~/.git-credentials 文件中
+credential.helper=store
+作用：告诉 Git 使用 store 模式的凭据助手来保存认证信息
 
 # 生成ssh
 ssh-keygen -t rsa
@@ -295,6 +305,8 @@ git config --global credential.helper store
 修改了文件所有者，Git项目所有者与当前用户不一致
 -- 解决方案
 git config --global --add safe.directory "*"
+-- 上传成功后，可重新Clone到本地，再删除全部允许配置
+git config --global --unset safe.directory
 ```
 
 ## [【GitHub】官网](https://github.com)
