--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -33,6 +33,9 @@ credential.https://gitee.com.provider=generic
   store					表示将认证信息（如用户名和密码）以纯文本的形式存储在用户目录下的 ~/.git-credentials 文件中
 credential.helper=store
 作用：告诉 Git 使用 store 模式的凭据助手来保存认证信息
+# 取消配置
+git config --global --unset credential.https://gitee.com.provider
+git config --global --unset credential.helper
 
 # 生成ssh
 ssh-keygen -t rsa
