--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -36,6 +36,8 @@ credential.helper=store
 # 取消配置
 git config --global --unset credential.https://gitee.com.provider
 git config --global --unset credential.helper
+# 使用 wincred 来存储 GitHub 凭据(Windows命令)
+git config --global credential.helper wincred
 
 # 生成ssh
 ssh-keygen -t rsa
@@ -225,6 +227,38 @@ git branch --set-upstream-to=origin/freshbran
 
 # 之后 freshbran分支 可以直接推送
 git push
+```
+
+#### * 取消推送
+
+```shell
+假设 GitHub提交记录如下
+Y2024M12D26_V3		537286e
+Y2024M12D26_V2		f2929c3
+Y2024M12D26_V1		3af1d73
+
+1) 确认目标提交
+git log --oneline
+-- 提交历史如下
+537286e (HEAD -> master, origin/master, origin/HEAD) Y2024M12D26_V3
+f2929c3 Y2024M12D26_V2
+3af1d73 Y2024M12D26_V1
+
+2) 回滚到 Y2024M12D26_V2 提交，并删除 Y2024M12D26_V3 的更改记录
+git reset --hard f2929c3
+
+3) 强制推送到远程仓库(若要覆盖远程分支历史，需要使用 --force 参数强制推送)
+git push origin <branch-name> --force
+-- 例如
+git push origin master --force
+
+4) 验证远程仓库提交记录
+git log origin/<branch-name> --oneline
+-- 例如
+git log origin/master --oneline
+-- 显示
+f2929c3 (HEAD -> master, origin/master, origin/HEAD) Y2024M12D26_V2
+3af1d73 Y2024M12D26_V1
 ```
 
 #### * [更新分支](https://www.cnblogs.com/martinl/p/6834388.html)
